# boltr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs  version.rs
src/chunk/: mod.rs  reader.rs  writer.rs
src/client/: connection.rs  mod.rs  session.rs
src/message/: decode.rs  encode.rs  mod.rs  request.rs  response.rs
src/packstream/: decode.rs  encode.rs  marker.rs  mod.rs
src/server/: auth.rs  backend.rs  builder.rs  connection.rs  handshake.rs  mod.rs  session_manager.rs  state_machine.rs
src/types/: mod.rs  value.rs
src/ws/: mod.rs  server.rs  stream.rs
