[package]
name = "boltr"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrafeoDB/boltr"
description = "Pure-Rust Bolt v5.x wire protocol library"
readme = "README.md"
keywords = ["bolt", "neo4j", "graph-database", "protocol"]
categories = ["database", "network-programming"]
exclude = [".claude/", ".github/", "target/"]

[dependencies]
async-trait = "0.1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls-pki-types"]
client = []
ws = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies.tokio-rustls]
version = "0.26"
optional = true

[dependencies.rustls-pki-types]
version = "1"
optional = true

[dependencies.tokio-tungstenite]
version = "0.26"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true
default-features = false
features = ["sink"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

